# Medina

./: .gitignore  BUGLOG.md  Blueprint_Estimation_UI.html  CLAUDE.md  app.py  plan.md  pyproject.toml  run_server.py  test_regression.py
.streamlit/: config.toml
demo_data/: hcmc_inventory.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/demo/: anoka.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/hooks/: useAgentProgress.ts  useTableEdits.ts
frontend/src/store/: authStore.ts  projectStore.ts
frontend/src/types/: index.ts
requirements/: Requirement_Unnderstanding.docx
sample/Anoka Dispensary/: output.xlsx
sample/HCMC/: HCMC Count.xlsx
src/medina/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py  pipeline.py  runtime_params.py  vlm_client.py
src/medina/api/: __init__.py  auth.py  chat.py  feedback.py  fix_it.py  learnings.py  main.py  models.py  orchestrator_wrapper.py  patterns.py  projects.py  seed.py
src/medina/cove/: __init__.py  llm_verifier.py  verifier.py
src/medina/db/: __init__.py  engine.py  migration.py  repositories.py  schema.py  vector_store.py
src/medina/output/: __init__.py  excel.py  json_out.py
src/medina/pdf/: __init__.py  classifier.py  loader.py  renderer.py  (+2 more)
train/: 24031_15_Elec_inventory.xlsx  DENIS DENIS-2025-11CD(639033655788547115)_inventory.xlsx  DENIS DENIS-2025-1220(639033657190693031)_inventory.xlsx  DENIS DENIS-2025-1266(639033656633682925)_inventory.xlsx  DENIS DENIS-2025-12E2(639033655256888596)_inventory.xlsx
(+71 files in other folders)
